# RadeonProRenderANARI

./: .clang-format  .gitignore  Array.cpp  Array.h  CMakeLists.txt  Data.h  License.txt  Object.cpp  Object.h  README.MD  RPRDevice.cpp  RPRDevice.h  RPRDevice_old.cpp  glm_extras.h  interface.h  rpr_common.h  version.h
camera/: Camera.cpp  Camera.h  Orthographic.cpp  Orthographic.h  Perspective.cpp  Perspective.h
frame/: Frame.cpp  Frame.h  Future.h
material/: Material.cpp  Material.h  MatteMaterial.cpp  MatteMaterial.h  OBJMaterial.cpp  OBJMaterial.h  SimpleMaterial.cpp  SimpleMaterial.h
renderer/: PathTracerRenderer.cpp  PathTracerRenderer.h  Renderer.cpp  Renderer.h
sampler/: PrimitiveSampler.cpp  PrimitiveSampler.h  Sampler.cpp  Sampler.h  TransformSampler.cpp  TransformSampler.h
sampler/image/: Image.cpp  Image.h  Image1D.cpp  Image1D.h  Image2D.cpp  Image2D.h  Image3D.cpp  Image3D.h
sampler/util/: TransformNode.cpp  TransformNode.h
scene/: Group.cpp  Group.h  Instance.cpp  Instance.h  SceneObject.h  World.cpp  World.h
scene/geometry/: GeometricModel.cpp  GeometricModel.h  Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  Spheres.cpp  Spheres.h  Surface.cpp  Surface.h
scene/geometry/attributes/: Attribute.cpp  Attribute.h  PerShapeAttribute.cpp  PerShapeAttribute.h  PrimVarAttribute.cpp  PrimVarAttribute.h  PrimitiveColor.cpp  PrimitiveColor.h
scene/geometry/mesh/: Mesh.cpp  Mesh.h  Quad.h  Triangles.cpp  Triangles.h
scene/geometry/primitives/: Cones.cpp  Cones.h  Cylinders.cpp  Cylinders.h  Primitives.cpp  Primitives.h  Spheres.cpp  Spheres.h
scene/lights/: AnalyticLight.cpp  AnalyticLight.h  AreaLight.cpp  AreaLight.h  EnvironmentLight.cpp  EnvironmentLight.h  Light.cpp  Light.h
scene/lights/analytic/: AnalyticLight.cpp  AnalyticLight.h  AnalyticLightOld.cpp  AnalyticLightOld.h  DirectionalLight.cpp  DirectionalLight.h  EnvironmentLight.cpp  EnvironmentLight.h  HdriLight.cpp  HdriLight.h  PointLight.cpp  PointLight.h  RingLight.cpp  RingLight.h  SpotLight.cpp  SpotLight.h
scene/lights/area/: AreaLight.cpp  AreaLight.h  QuadLight.cpp  QuadLight.h
scene/volume/: ScivisVolume.cpp  ScivisVolume.h  SpatialField.cpp  SpatialField.h  StucturedRegularSpatialField.cpp  StucturedRegularSpatialField.h  Volume.cpp  Volume.h
